story / Support vector classifier and regressor with/without PCA for visualization

--- a/Exams/Midterm_2/SVM_Regression_LKH.ipynb
+++ b/Exams/Midterm_2/SVM_Regression_LKH.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,25 +34,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('_inputs/A_exam.csv')"
+    "df = pd.read_csv('input/reg_A.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(1000, 15)"
+       "(1000, 13)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {
     "scrolled": false
    },
@@ -99,11 +99,9 @@
        "      <th>J</th>\n",
        "      <th>K</th>\n",
        "      <th>L</th>\n",
-       "      <th>Response</th>\n",
-       "      <th>D</th>\n",
-       "      <th>E</th>\n",
        "      <th>M</th>\n",
        "      <th>N</th>\n",
+       "      <th>Response</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -119,11 +117,9 @@
        "      <td>0.337155</td>\n",
        "      <td>-1.592293</td>\n",
        "      <td>-0.103458</td>\n",
-       "      <td>-0.456757</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>Yes</td>\n",
        "      <td>-0.205713</td>\n",
        "      <td>-138.988001</td>\n",
+       "      <td>-0.456757</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -137,11 +133,9 @@
        "      <td>1.175852</td>\n",
        "      <td>-0.746916</td>\n",
        "      <td>1.747668</td>\n",
-       "      <td>1.396062</td>\n",
-       "      <td>Fema</td>\n",
-       "      <td>Yes</td>\n",
        "      <td>1.892266</td>\n",
        "      <td>29.152263</td>\n",
+       "      <td>1.396062</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -155,11 +149,9 @@
        "      <td>-0.204924</td>\n",
        "      <td>-0.737706</td>\n",
        "      <td>0.852126</td>\n",
-       "      <td>1.612660</td>\n",
-       "      <td>Fema</td>\n",
-       "      <td>Yes</td>\n",
        "      <td>1.080193</td>\n",
        "      <td>-58.942485</td>\n",
+       "      <td>1.612660</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -173,11 +165,9 @@
        "      <td>-1.696172</td>\n",
        "      <td>-1.226760</td>\n",
        "      <td>-0.876860</td>\n",
-       "      <td>-0.498703</td>\n",
-       "      <td>Fema</td>\n",
-       "      <td>Yes</td>\n",
        "      <td>-1.143868</td>\n",
        "      <td>-337.379225</td>\n",
+       "      <td>-0.498703</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -191,11 +181,9 @@
        "      <td>-0.923201</td>\n",
        "      <td>-0.929357</td>\n",
        "      <td>-1.304802</td>\n",
-       "      <td>1.186234</td>\n",
-       "      <td>Fema</td>\n",
-       "      <td>Yes</td>\n",
        "      <td>-1.611586</td>\n",
        "      <td>-169.823726</td>\n",
+       "      <td>1.186234</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -209,15 +197,15 @@
        "3 -337.510287 -0.535584  0.276812  0.547569 -0.625828  0.779547 -0.193539   \n",
        "4 -170.224848  1.288707 -0.454460 -0.638863 -1.486823 -0.525961  0.147493   \n",
        "\n",
-       "          J         K         L  Response     D    E         M           N  \n",
-       "0  0.337155 -1.592293 -0.103458 -0.456757  Male  Yes -0.205713 -138.988001  \n",
-       "1  1.175852 -0.746916  1.747668  1.396062  Fema  Yes  1.892266   29.152263  \n",
-       "2 -0.204924 -0.737706  0.852126  1.612660  Fema  Yes  1.080193  -58.942485  \n",
-       "3 -1.696172 -1.226760 -0.876860 -0.498703  Fema  Yes -1.143868 -337.379225  \n",
-       "4 -0.923201 -0.929357 -1.304802  1.186234  Fema  Yes -1.611586 -169.823726  "
+       "          J         K         L         M           N  Response  \n",
+       "0  0.337155 -1.592293 -0.103458 -0.205713 -138.988001 -0.456757  \n",
+       "1  1.175852 -0.746916  1.747668  1.892266   29.152263  1.396062  \n",
+       "2 -0.204924 -0.737706  0.852126  1.080193  -58.942485  1.612660  \n",
+       "3 -1.696172 -1.226760 -0.876860 -1.143868 -337.379225 -0.498703  \n",
+       "4 -0.923201 -0.929357 -1.304802 -1.611586 -169.823726  1.186234  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -228,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -385,7 +373,7 @@
        "4 -0.923201 -0.929357 -1.304802 -1.611586 -169.823726       0      1  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -396,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -457,7 +445,7 @@
        "4  1.186234"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -468,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -499,7 +487,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
